--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,36 +1,44 @@
-
-buildscript {
-    repositories {
-        jcenter()
-    }
-
-    dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
-    }
-}
-
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
 
+    try{
+        compileSdkVersion rootProject.ext.compileSdkVersion
+    }catch(Exception e){
+        compileSdkVersion 29
+    }
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 22
+        minSdkVersion 9
+        try{
+            targetSdkVersion rootProject.ext.targetSdkVersion
+        }catch(Exception e){
+            targetSdkVersion 29
+        }
         versionCode 1
         versionName "1.0"
-    }
-    lintOptions {
-        abortOnError false
-    }
-}
 
-repositories {
-    mavenCentral()
+
+        //testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+    }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:+'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    //implementation 'com.android.support:appcompat-v7:28.0.0'
+    //testImplementation 'junit:junit:4.12'
+    //androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    //androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    compileOnly 'com.facebook.react:react-native:+'
+
+    //添加 Sensors Analytics SDK 依赖
+    compileOnly 'com.sensorsdata.analytics.android:SensorsAnalyticsSDK:latest.integration'
 }
-  
